[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "badwords-py"
version = "2.3.1"
requires-python = ">=3.10"
authors = [
  {name = "iamlostshe", email = "vanamelcikov7275@gmail.com"},
  {name = "FlacSy", email = "flacsy.x@gmail.com"},
]
description = "This is a library for effective moderation of content."
readme = "README.md"
license = {text = "MIT"}
keywords = [
  "moderation",
  "content filtering",
  "profanity",
  "obscenity detection"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0", "ruff>=0.4"]
ml = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.14", "transformers>=4.36"]

[project.urls]
Homepage = "https://badwords.flacsy.dev"
Documentation = "https://badwords.flacsy.dev"
Repository = "https://github.com/FlacSy/badwords"
Issues = "https://github.com/FlacSy/badwords/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["benchmark: run benchmarks (deselect with '-m \"not benchmark\"')"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812"]

[tool.maturin]
manifest-path = "rust/badwords-py/Cargo.toml"
python-source = "python"
python-packages = ["badwords"]
module-name = "badwords._native"
